--- a/activity3_IDconstraint/activity3point1IDconstraint-master/app/src/main/res/layout/activity_main.xml
+++ b/activity3_IDconstraint/activity3point1IDconstraint-master/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="7dp"
         android:background="#FEFDFD"
-        android:text="Student No.:20171141"
+        android:text="Student No.:20161010
         android:textColor="#841813"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
-        android:text="MIKE G. HULIGANGA"
+        android:text="GIAN CARLO V. CARINO"
         android:textColor="#FEFDFD"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
